# fastnotify

./: README.md  main.py  pyproject.toml  requirements.in  requirements.txt
alembic/: env.py
alembic/versions/: b6ef0f4bbf98_initial_table.py
app/: main.py
app/core/: database.py  mongo.py
app/models/: __init__.py  enums.py  notification.py  user.py
