[project]
name = "fastnotify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi[all]>=0.115.11",
    "motor>=3.7.0",
    "pymongo>=4.11.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "starlette-admin>=0.14.1",
]
